tests/snapshots/snapshots__cli_handoff_agent_last_no_preamble.snap
---
source: tests/snapshots.rs
expression: "cli_stdout(&fixture,\n&[\"handoff\", \"f4eea6d2\", \"--stdout\", \"--no-preamble\", \"--limit\", \"2\"])"
---
[user]
Keep it read-only.

[assistant]
Here is the plan:
1. Model traces as facts.
2. Expose metrics.

[end of transcript: 2 messages, ~40 tokens (estimate)]
