tests/snapshots/snapshots__cli_show_agent_json.snap
---
source: tests/snapshots.rs
expression: "cli_stdout(&fixture, &[\"show\", \"f4eea6d2\", \"--json\"])"
---
{
  "id": "f4eea6d2-d2d3-41ad-b290-824445295a15",
  "title": "Langfuse Semantic Layer",
  "source": "agent",
  "workspace": "/Users/demo/project-x",
  "workspace_hash": "beba428e99a69c4ecef285b898662cd3",
  "model": "claude-4.5-sonnet",
  "created_at": "2025-09-04T15:33:20Z",
  "updated_at": "2025-09-04T16:33:20Z",
  "message_count": 4,
  "messages": [
    {
      "role": "user",
      "content": "Design a semantic layer for Langfuse traces.",
      "timestamp": "Thursday, Sep 4, 2025, 9:33 AM (UTC-6)"
    },
    {
      "role": "assistant",
      "content": "Let me look at the trace schema first.",
      "timestamp": null
    },
    {
      "role": "user",
      "content": "Keep it read-only.",
      "timestamp": null
    },
    {
      "role": "assistant",
      "content": "Here is the plan:\n1. Model traces as facts.\n2. Expose metrics.",
      "timestamp": null
    }
  ]
}
