tests/snapshots/snapshots__export_ide_jsonl.snap
---
source: tests/snapshots.rs
expression: "String::from_utf8(out).unwrap()"
---
{"role":"user","content":"Replace this view with a dynamic table.","timestamp":"1757200000000"}
{"role":"assistant","content":"Here is a plan.","timestamp":"1757200060000"}
{"role":"assistant","content":"Use this component:\n\n```tsx\nexport function Table() {\n  return null;\n}\n```"}
